--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -4,13 +4,9 @@
 @import "../bower_components/font-awesome/less/font-awesome.less";
 @fa-font-path: "../fonts/font-awesome";
 
-.browsehappy {
-  margin: 0.2em 0; 
-  background: #ccc; 
-  color: #000; 
-  padding: 0.2em 0; 
-}
+@import "../fonts/google/cutivemono.css";
+@import "../fonts/uniekezaak/stylesheet.css";
 
-.jumbotron {
-  margin: 50px auto 0 auto;
+h1, h2,h3,h4,h5 {
+  text-transform: uppercase;
 }
