--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -6,7 +6,7 @@
 @fa-font-path: "../fonts/font-awesome";
 @import "../bower_components/font-awesome/less/font-awesome.less";
 
-@import "../fonts/google/cutivemono.less";
+@import "../fonts/google/ptmono.less";
 @uniekezaak-font-path: "../fonts/uniekezaak/";
 
 @import "../fonts/uniekezaak/stylesheet.less";
