--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -259,8 +259,8 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: Cutive Mono;
-  font-size: 15px;
+  font-family: "PT Mono";
+  font-size: 13px;
   line-height: 1.428571429;
   color: #686353;
   background-color: #f9f7f0;
@@ -314,8 +314,8 @@ img {
   border-radius: 50%;
 }
 hr {
-  margin-top: 21px;
-  margin-bottom: 21px;
+  margin-top: 18px;
+  margin-bottom: 18px;
   border: 0;
   border-top: 1px solid #f9f7f0;
 }
@@ -377,8 +377,8 @@ h6 .small,
 h1,
 h2,
 h3 {
-  margin-top: 21px;
-  margin-bottom: 10.5px;
+  margin-top: 18px;
+  margin-bottom: 9px;
 }
 h1 small,
 h2 small,
@@ -391,8 +391,8 @@ h3 .small {
 h4,
 h5,
 h6 {
-  margin-top: 10.5px;
-  margin-bottom: 10.5px;
+  margin-top: 9px;
+  margin-bottom: 9px;
 }
 h4 small,
 h5 small,
@@ -404,11 +404,11 @@ h6 .small {
 }
 h1,
 .h1 {
-  font-size: 39px;
+  font-size: 46px;
 }
 h2,
 .h2 {
-  font-size: 32px;
+  font-size: 40px;
 }
 h3,
 .h3 {
@@ -420,24 +420,24 @@ h4,
 }
 h5,
 .h5 {
-  font-size: 15px;
+  font-size: 13px;
 }
 h6,
 .h6 {
-  font-size: 13px;
+  font-size: 12px;
 }
 p {
-  margin: 0 0 10.5px;
+  margin: 0 0 9px;
 }
 .lead {
-  margin-bottom: 21px;
-  font-size: 17px;
+  margin-bottom: 18px;
+  font-size: 14px;
   font-weight: 200;
   line-height: 1.4;
 }
 @media (min-width: 768px) {
   .lead {
-    font-size: 22.5px;
+    font-size: 19.5px;
   }
 }
 small,
@@ -490,14 +490,14 @@ cite {
   text-align: center;
 }
 .page-header {
-  padding-bottom: 9.5px;
-  margin: 42px 0 21px;
+  padding-bottom: 8px;
+  margin: 36px 0 18px;
   border-bottom: 1px solid #f9f7f0;
 }
 ul,
 ol {
   margin-top: 0;
-  margin-bottom: 10.5px;
+  margin-bottom: 9px;
 }
 ul ul,
 ol ul,
@@ -523,7 +523,7 @@ ol ol {
 }
 dl {
   margin-top: 0;
-  margin-bottom: 21px;
+  margin-bottom: 18px;
 }
 dt,
 dd {
@@ -575,12 +575,12 @@ abbr[data-original-title] {
   text-transform: uppercase;
 }
 blockquote {
-  padding: 10.5px 21px;
-  margin: 0 0 21px;
+  padding: 9px 18px;
+  margin: 0 0 18px;
   border-left: 5px solid #f9f7f0;
 }
 blockquote p {
-  font-size: 18.75px;
+  font-size: 16.25px;
   font-weight: 300;
   line-height: 1.25;
 }
@@ -621,7 +621,7 @@ blockquote:after {
   content: "";
 }
 address {
-  margin-bottom: 21px;
+  margin-bottom: 18px;
   font-style: normal;
   line-height: 1.428571429;
 }
@@ -629,7 +629,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: Cutive Mono;
+  font-family: "PT Mono";
 }
 code {
   padding: 2px 4px;
@@ -641,9 +641,9 @@ code {
 }
 pre {
   display: block;
-  padding: 10px;
-  margin: 0 0 10.5px;
-  font-size: 14px;
+  padding: 8.5px;
+  margin: 0 0 9px;
+  font-size: 12px;
   line-height: 1.428571429;
   word-break: break-all;
   word-wrap: break-word;
@@ -1366,7 +1366,7 @@ th {
 }
 .table {
   width: 100%;
-  margin-bottom: 21px;
+  margin-bottom: 18px;
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
@@ -1505,7 +1505,7 @@ table th[class*="col-"] {
 @media (max-width: 767px) {
   .table-responsive {
     width: 100%;
-    margin-bottom: 15.75px;
+    margin-bottom: 13.5px;
     overflow-y: hidden;
     overflow-x: scroll;
     -ms-overflow-style: -ms-autohiding-scrollbar;
@@ -1558,8 +1558,8 @@ legend {
   display: block;
   width: 100%;
   padding: 0;
-  margin-bottom: 21px;
-  font-size: 22.5px;
+  margin-bottom: 18px;
+  font-size: 19.5px;
   line-height: inherit;
   color: #686353;
   border: 0;
@@ -1608,7 +1608,7 @@ input[type="number"]::-webkit-inner-spin-button {
 output {
   display: block;
   padding-top: 7px;
-  font-size: 15px;
+  font-size: 13px;
   line-height: 1.428571429;
   color: #686353;
   vertical-align: middle;
@@ -1616,9 +1616,9 @@ output {
 .form-control {
   display: block;
   width: 100%;
-  height: 35px;
+  height: 32px;
   padding: 6px 12px;
-  font-size: 15px;
+  font-size: 13px;
   line-height: 1.428571429;
   color: #686353;
   vertical-align: middle;
@@ -1665,7 +1665,7 @@ textarea.form-control {
 .radio,
 .checkbox {
   display: block;
-  min-height: 21px;
+  min-height: 18px;
   margin-top: 10px;
   margin-bottom: 10px;
   padding-left: 20px;
@@ -1718,29 +1718,29 @@ fieldset[disabled] .checkbox-inline {
   cursor: not-allowed;
 }
 .input-sm {
-  height: 31px;
+  height: 30px;
   padding: 5px 10px;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 1.5;
   border-radius: 0px;
 }
 select.input-sm {
-  height: 31px;
-  line-height: 31px;
+  height: 30px;
+  line-height: 30px;
 }
 textarea.input-sm {
   height: auto;
 }
 .input-lg {
-  height: 47px;
+  height: 44px;
   padding: 10px 16px;
-  font-size: 19px;
+  font-size: 17px;
   line-height: 1.33;
   border-radius: 0px;
 }
 select.input-lg {
-  height: 47px;
-  line-height: 47px;
+  height: 44px;
+  line-height: 44px;
 }
 textarea.input-lg {
   height: auto;
@@ -1859,7 +1859,7 @@ textarea.input-lg {
 }
 .form-horizontal .radio,
 .form-horizontal .checkbox {
-  min-height: 28px;
+  min-height: 25px;
 }
 .form-horizontal .form-group {
   margin-left: -15px;
@@ -1900,7 +1900,7 @@ textarea.input-lg {
   border: 1px solid transparent;
   white-space: nowrap;
   padding: 6px 12px;
-  font-size: 15px;
+  font-size: 13px;
   line-height: 1.428571429;
   border-radius: 0px;
   -webkit-user-select: none;
@@ -2217,19 +2217,19 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-lg {
   padding: 10px 16px;
-  font-size: 19px;
+  font-size: 17px;
   line-height: 1.33;
   border-radius: 0px;
 }
 .btn-sm {
   padding: 5px 10px;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 1.5;
   border-radius: 0px;
 }
 .btn-xs {
   padding: 1px 5px;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 1.5;
   border-radius: 0px;
 }
@@ -2914,7 +2914,7 @@ input[type="button"].btn-block {
   padding: 5px 0;
   margin: 2px 0 0;
   list-style: none;
-  font-size: 15px;
+  font-size: 13px;
   background-color: #ffffff;
   border: 1px solid #cccccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
@@ -2929,7 +2929,7 @@ input[type="button"].btn-block {
 }
 .dropdown-menu .divider {
   height: 1px;
-  margin: 9.5px 0;
+  margin: 8px 0;
   overflow: hidden;
   background-color: #e5e5e5;
 }
@@ -2978,7 +2978,7 @@ input[type="button"].btn-block {
 .dropdown-header {
   display: block;
   padding: 3px 20px;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 1.428571429;
   color: #eeebe0;
 }
@@ -3104,19 +3104,19 @@ input[type="button"].btn-block {
 }
 .btn-group-xs > .btn {
   padding: 1px 5px;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 1.5;
   border-radius: 0px;
 }
 .btn-group-sm > .btn {
   padding: 5px 10px;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 1.5;
   border-radius: 0px;
 }
 .btn-group-lg > .btn {
   padding: 10px 16px;
-  font-size: 19px;
+  font-size: 17px;
   line-height: 1.33;
   border-radius: 0px;
 }
@@ -3241,17 +3241,17 @@ input[type="button"].btn-block {
 .input-group-lg > .form-control,
 .input-group-lg > .input-group-addon,
 .input-group-lg > .input-group-btn > .btn {
-  height: 47px;
+  height: 44px;
   padding: 10px 16px;
-  font-size: 19px;
+  font-size: 17px;
   line-height: 1.33;
   border-radius: 0px;
 }
 select.input-group-lg > .form-control,
 select.input-group-lg > .input-group-addon,
 select.input-group-lg > .input-group-btn > .btn {
-  height: 47px;
-  line-height: 47px;
+  height: 44px;
+  line-height: 44px;
 }
 textarea.input-group-lg > .form-control,
 textarea.input-group-lg > .input-group-addon,
@@ -3261,17 +3261,17 @@ textarea.input-group-lg > .input-group-btn > .btn {
 .input-group-sm > .form-control,
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .btn {
-  height: 31px;
+  height: 30px;
   padding: 5px 10px;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 1.5;
   border-radius: 0px;
 }
 select.input-group-sm > .form-control,
 select.input-group-sm > .input-group-addon,
 select.input-group-sm > .input-group-btn > .btn {
-  height: 31px;
-  line-height: 31px;
+  height: 30px;
+  line-height: 30px;
 }
 textarea.input-group-sm > .form-control,
 textarea.input-group-sm > .input-group-addon,
@@ -3296,7 +3296,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .input-group-addon {
   padding: 6px 12px;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: normal;
   line-height: 1;
   color: #686353;
@@ -3307,12 +3307,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .input-group-addon.input-sm {
   padding: 5px 10px;
-  font-size: 13px;
+  font-size: 12px;
   border-radius: 0px;
 }
 .input-group-addon.input-lg {
   padding: 10px 16px;
-  font-size: 19px;
+  font-size: 17px;
   border-radius: 0px;
 }
 .input-group-addon input[type="radio"],
@@ -3414,7 +3414,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .nav .nav-divider {
   height: 1px;
-  margin: 9.5px 0;
+  margin: 8px 0;
   overflow: hidden;
   background-color: #e5e5e5;
 }
@@ -3572,7 +3572,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar {
   position: relative;
   min-height: 100px;
-  margin-bottom: 21px;
+  margin-bottom: 18px;
   border: 1px solid transparent;
 }
 .navbar:before,
@@ -3712,9 +3712,9 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  padding: 39.5px 15px;
-  font-size: 19px;
-  line-height: 21px;
+  padding: 41px 15px;
+  font-size: 17px;
+  line-height: 18px;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -3752,12 +3752,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-nav {
-  margin: 19.75px -15px;
+  margin: 20.5px -15px;
 }
 .navbar-nav > li > a {
   padding-top: 10px;
   padding-bottom: 10px;
-  line-height: 21px;
+  line-height: 18px;
 }
 @media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
@@ -3774,7 +3774,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
     padding: 5px 15px 5px 25px;
   }
   .navbar-nav .open .dropdown-menu > li > a {
-    line-height: 21px;
+    line-height: 18px;
   }
   .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-nav .open .dropdown-menu > li > a:focus {
@@ -3790,8 +3790,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
     float: left;
   }
   .navbar-nav > li > a {
-    padding-top: 39.5px;
-    padding-bottom: 39.5px;
+    padding-top: 41px;
+    padding-bottom: 41px;
   }
   .navbar-nav.navbar-right:last-child {
     margin-right: -15px;
@@ -3815,8 +3815,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  margin-top: 32.5px;
-  margin-bottom: 32.5px;
+  margin-top: 34px;
+  margin-bottom: 34px;
 }
 @media (min-width: 768px) {
   .navbar-form .form-group {
@@ -3878,20 +3878,20 @@ textarea.input-group-sm > .input-group-btn > .btn {
   right: 0;
 }
 .navbar-btn {
-  margin-top: 32.5px;
-  margin-bottom: 32.5px;
+  margin-top: 34px;
+  margin-bottom: 34px;
 }
 .navbar-btn.btn-sm {
-  margin-top: 34.5px;
-  margin-bottom: 34.5px;
+  margin-top: 35px;
+  margin-bottom: 35px;
 }
 .navbar-btn.btn-xs {
   margin-top: 39px;
   margin-bottom: 39px;
 }
 .navbar-text {
-  margin-top: 39.5px;
-  margin-bottom: 39.5px;
+  margin-top: 41px;
+  margin-bottom: 41px;
 }
 @media (min-width: 768px) {
   .navbar-text {
@@ -4077,7 +4077,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .breadcrumb {
   padding: 8px 15px;
-  margin-bottom: 21px;
+  margin-bottom: 18px;
   list-style: none;
   background-color: #f5f5f5;
   border-radius: 0px;
@@ -4096,7 +4096,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pagination {
   display: inline-block;
   padding-left: 0;
-  margin: 21px 0;
+  margin: 18px 0;
   border-radius: 0px;
 }
 .pagination > li {
@@ -4156,7 +4156,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pagination-lg > li > a,
 .pagination-lg > li > span {
   padding: 10px 16px;
-  font-size: 19px;
+  font-size: 17px;
 }
 .pagination-lg > li:first-child > a,
 .pagination-lg > li:first-child > span {
@@ -4171,7 +4171,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pagination-sm > li > a,
 .pagination-sm > li > span {
   padding: 5px 10px;
-  font-size: 13px;
+  font-size: 12px;
 }
 .pagination-sm > li:first-child > a,
 .pagination-sm > li:first-child > span {
@@ -4185,7 +4185,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .pager {
   padding-left: 0;
-  margin: 21px 0;
+  margin: 18px 0;
   list-style: none;
   text-align: center;
 }
@@ -4308,7 +4308,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   display: inline-block;
   min-width: 10px;
   padding: 3px 7px;
-  font-size: 13px;
+  font-size: 12px;
   font-weight: bold;
   color: #ffffff;
   line-height: 1;
@@ -4342,7 +4342,7 @@ a.list-group-item.active > .badge,
 .jumbotron {
   padding: 30px;
   margin-bottom: 30px;
-  font-size: 23px;
+  font-size: 20px;
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
@@ -4373,13 +4373,13 @@ a.list-group-item.active > .badge,
   }
   .jumbotron h1,
   .jumbotron .h1 {
-    font-size: 67.5px;
+    font-size: 58.5px;
   }
 }
 .thumbnail {
   display: block;
   padding: 4px;
-  margin-bottom: 21px;
+  margin-bottom: 18px;
   line-height: 1.428571429;
   background-color: #f9f7f0;
   border: 1px solid #dddddd;
@@ -4406,7 +4406,7 @@ a.thumbnail.active {
 }
 .alert {
   padding: 15px;
-  margin-bottom: 21px;
+  margin-bottom: 18px;
   border: 1px solid transparent;
   border-radius: 0px;
 }
@@ -4495,8 +4495,8 @@ a.thumbnail.active {
 }
 .progress {
   overflow: hidden;
-  height: 21px;
-  margin-bottom: 21px;
+  height: 18px;
+  margin-bottom: 18px;
   background-color: #f5f5f5;
   border-radius: 0px;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -4506,8 +4506,8 @@ a.thumbnail.active {
   float: left;
   width: 0%;
   height: 100%;
-  font-size: 13px;
-  line-height: 21px;
+  font-size: 12px;
+  line-height: 18px;
   color: #ffffff;
   text-align: center;
   background-color: #fc54a3;
@@ -4646,7 +4646,7 @@ a.list-group-item.active:focus .list-group-item-text {
   line-height: 1.3;
 }
 .panel {
-  margin-bottom: 21px;
+  margin-bottom: 18px;
   background-color: #ffffff;
   border: 1px solid transparent;
   border-radius: 0px;
@@ -4762,7 +4762,7 @@ a.list-group-item.active:focus .list-group-item-text {
 .panel-title {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 17px;
+  font-size: 15px;
   color: inherit;
 }
 .panel-title > a {
@@ -4903,7 +4903,7 @@ a.list-group-item.active:focus .list-group-item-text {
 }
 .close {
   float: right;
-  font-size: 22.5px;
+  font-size: 19.5px;
   font-weight: bold;
   line-height: 1;
   color: #000000;
@@ -5051,7 +5051,7 @@ button.close {
   z-index: 1030;
   display: block;
   visibility: visible;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 1.4;
   opacity: 0;
   filter: alpha(opacity=0);
@@ -5177,7 +5177,7 @@ button.close {
 .popover-title {
   margin: 0;
   padding: 8px 14px;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: normal;
   line-height: 18px;
   background-color: #f7f7f7;
@@ -7299,10 +7299,10 @@ td.visible-print {
   content: "\f196";
 }
 @font-face {
-  font-family: 'Cutive Mono';
+  font-family: 'PT Mono';
   font-style: normal;
   font-weight: 400;
-  src: local('Cutive Mono'), local('CutiveMono-Regular'), url(http://themes.googleusercontent.com/static/fonts/cutivemono/v2/N5odNRruTwjvCM8y77PhQbrIa-7acMAeDBVuclsi6Gc.woff) format('woff');
+  src: local('PT Mono'), local('PTMono-Regular'), url(http://themes.googleusercontent.com/static/fonts/ptmono/v2/RTA0Dhj_HESY0h-ax44VkwLUuEpTyoUstqEm5AMlJo4.woff) format('woff');
 }
 /* Generated by Font Squirrel (http://www.fontsquirrel.com) on January 11, 2014 */
 @font-face {
@@ -7392,11 +7392,13 @@ body {
   text-transform: uppercase;
   font-size: 40px;
   margin-top: 40px;
+  padding-left: 10px;
 }
 .logo img {
   margin-top: 5px;
   height: 90px;
   width: 90px;
+  margin-right: 10px;
 }
 .navbar-center {
   width: 50
@@ -7420,18 +7422,19 @@ h3,
 h4,
 h5 {
   text-transform: uppercase;
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
 }
 .uniek-product-image {
   padding: 10px;
 }
 .spacesmall {
-  margin-top: 21px;
+  margin-top: 18px;
 }
 .space {
-  margin-top: 42px;
+  margin-top: 36px;
 }
 .spacelarge {
-  margin-top: 84px;
+  margin-top: 72px;
 }
 .unieke-afbeelding {
   padding: 10px;
@@ -7439,5 +7442,29 @@ h5 {
 }
 .unieke-afbeelding img {
   width: 90%;
+}
+.unieke-voeter {
+  border-top: 3px solid #97bf04;
+  border-bottom: 3px solid #686353;
+}
+.unieke-voeter h4 i {
+  color: #312f27;
+}
+.unieke-voordelen {
+  background-color: #d2cec0;
+}
+.unieke-links {
+  background-color: #eeebe0;
+}
+.uniek-pagina-einde {
+  padding: 5px;
+  background-color: #312f27;
+}
+.uniek-pagina-einde img {
+  width: 30px;
+}
+.unieke-pagina-opleuk {
+  height: 3px;
+  background-color: #fc54a3;
 }
 /*# sourceMappingURL=/styles/main.css.map */
