--- a/app/styles/navbar.less
+++ b/app/styles/navbar.less
@@ -8,12 +8,14 @@ body {
   text-transform: uppercase;
   font-size: 40px;
   margin-top: 40px;
+  padding-left: 10px;
 }
 
 .logo img {
   margin-top: 5px;
   height:90px;
   width:90px;
+  margin-right:10px;
 }
 
 .navbar-center {
