--- a/app/styles/uniekezaak.less
+++ b/app/styles/uniekezaak.less
@@ -1,6 +1,6 @@
 h1, h2,h3,h4,h5 {
   text-transform: uppercase;
-}
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, .5);}
 
 .uniek-product-image {
   padding:10px;
@@ -20,6 +20,36 @@ h1, h2,h3,h4,h5 {
   padding:10px;
   text-align: center;
 }
+
 .unieke-afbeelding img {
   width:90%;
+}
+
+.unieke-voeter {
+  border-top:3px solid @brand-secundiary;
+  border-bottom:3px solid @gray-dark;
+}
+.unieke-voeter h4 i {
+  color:@gray-darker;
+}
+
+.unieke-voordelen {
+  background-color: @gray;
+}
+
+.unieke-links {
+  background-color: @gray-light;
+}
+
+.uniek-pagina-einde {
+  padding:5px;
+  background-color: @gray-darker;
+}
+.uniek-pagina-einde img {
+width: 30px;
+}
+
+.unieke-pagina-opleuk {
+  height: 3px;
+  background-color: @brand-primary;
 }
