--- a/app/styles/uniekezaak.less
+++ b/app/styles/uniekezaak.less
@@ -2,6 +2,10 @@ h1, h2,h3,h4,h5 {
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgba(255, 255, 255, .5);}
 
+.text-secundairy {
+  color: @brand-secundiary;
+}
+
 .uniek-product-image {
   padding:10px;
 }
@@ -51,5 +55,9 @@ width: 30px;
 
 .unieke-pagina-opleuk {
   height: 3px;
+  background-color: @brand-primary;
+}
+
+.badge-primary {
   background-color: @brand-primary;
 }
