--- a/app/styles/sidebar.less
+++ b/app/styles/sidebar.less
@@ -35,7 +35,9 @@
   padding-top: 3px;
   padding-bottom: 3px;
   padding-left: 30px;
-  font-size: 90%;
+}
+.bs-sidebar .nav .nav,.bs-sidebar .nav li a  {
+  font-size: 150%;
 }
 /* Show and affix the side nav when space allows it */
 @media screen and (min-width: 992px) {
