--- a/app/styles/navbar.less
+++ b/app/styles/navbar.less
@@ -1,30 +1,16 @@
 // NAVIGATIE
-body {
-  padding-top:@navbar-height;
-}
-
-.logo-text {
-  font-family: 'uniekezaakregular';
-  text-transform: uppercase;
-  font-size: 40px;
-  margin-top: 40px;
-  padding-left: 10px;
-}
-
-.logo img {
-  margin-top: 5px;
-  height:90px;
-  width:90px;
-  margin-right:10px;
-}
 
 .navbar-center {
-  width:50
   margin:0 auto;
 }
 .navbar-center-inner {
   margin:0 auto;
   width:50%;
+}
+
+.navbar {
+  border: none !important;
+
 }
 
 .navbar-brand {
@@ -35,6 +21,10 @@ body {
   -webkit-box-shadow: 0px 1px 22px 0px rgba(50, 50, 50, 0.16);
   -moz-box-shadow:    0px 1px 22px 0px rgba(50, 50, 50, 0.16);
   box-shadow:         0px 1px 22px 0px rgba(50, 50, 50, 0.16);
+}
+
+.unieke-navigatie {
+  background: @gray-lighter url(/images/bg.jpg) repeat fixed;
 }
 
 // END NAVIGATIE
